Run tests during build; remove manpages when cleaning

--- a/debian/rules
+++ b/debian/rules
@@ -4,7 +4,9 @@
 	dh $@
 
 override_dh_auto_build:
+	rake
+	mkdir -p man
 	for i in bin/*; do pod2man -c "" -r "" $$i > man/$$(basename $$i).1; done
 
 override_dh_auto_clean:
-	rm -f man/*.1
+	rm -rf man/
