--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,8 @@ Uploaders: Antonio Terceiro <terceiro@softwarelivre.org>
 DM-Upload-Allowed: yes
 Build-Depends: debhelper (>= 7.0.50~), rake, libshoulda-ruby1.8, libmocha-ruby1.8, rubygems1.8, ruby-pkg-tools, ruby1.8, ruby1.8-dev, ruby1.9.1, ruby1.9.1-dev, devscripts
 Standards-Version: 3.9.1
-#Vcs-Git: git://git.debian.org/collab-maint/libnet-jabber-loudmouth-perl.git
-#Vcs-Browser: http://git.debian.org/?p=collab-maint/libnet-jabber-loudmouth-perl.git;a=summary
+Vcs-Git: git://git.debian.org/pkg-ruby-extras/gem2deb.git
+Vcs-Browser: http://git.debian.org/?p=pkg-ruby-extras/gem2deb.git;a=summary
 
 Package: gem2deb
 Architecture: all
