--- a/debian/rules
+++ b/debian/rules
@@ -4,7 +4,9 @@
 	dh $@
 
 override_dh_auto_build:
-	rake
+ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
+	rake test
+endif
 	mkdir -p man
 	for i in bin/*; do pod2man -c "" -r "" $$i > man/$$(basename $$i).1; done
 
