--- a/test/sample/simpleextension/Rakefile
+++ b/test/sample/simpleextension/Rakefile
@@ -14,6 +14,7 @@ spec = Gem::Specification.new do |s|
   s.description = <<EOF
 simpleextension is a simple native extension that is used to test dh_ruby.
 EOF
+  s.test_files = ['test/test_simpleextension.rb']
 end
 
 Rake::GemPackageTask.new(spec) do |pkg|
