--- a/test/sample/simpleextension_with_name_clash/Rakefile
+++ b/test/sample/simpleextension_with_name_clash/Rakefile
@@ -4,17 +4,17 @@ require 'rake/gempackagetask'
 spec = Gem::Specification.new do |s|
   s.platform = Gem::Platform::RUBY
   s.summary = "Simple native extension with .rb/.so name clash used to test dh_ruby"
-  s.name = 'simpleextension_with_name_clash'
+  s.name = 'simpleextension-with-name-clash'
   s.version = '1.2.3'
   s.requirements << 'none'
   s.require_path = 'ext'
-  s.extensions << 'ex'
+  s.extensions << 'ext/extconf.rb'
   #s.autorequire = 'rake'
-  s.files = Dir.glob('{bin,ext}/**/*')
+  s.files = Dir.glob('{lib,ext,test}/**/*')
   s.description = <<EOF
-simpleextension is a simple native extension that is used to test dh_ruby.
+simpleextension_with_name_clash is a simple native extension that is used to test dh_ruby.
 EOF
-  s.test_files = ['test/test_simpleextension.rb']
+  s.test_files = ['test/simpleextension_with_name_clash_test.rb']
 end
 
 Rake::GemPackageTask.new(spec) do |pkg|
