Remove Build-Depends: on rake
Rakefile still contains some utilities for gem2deb developers, but is
not required to build the package anymore.

--- a/debian/rules
+++ b/debian/rules
@@ -6,7 +6,7 @@
 override_dh_auto_build:
 ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
 	# NO_PKG_MANGLE=1 is only useful on Ubuntu buildds, to disable pkgbinarymangler
-	NO_PKG_MANGLE=1 rake test
+	NO_PKG_MANGLE=1 ./test/run
 endif
 	mkdir -p man
 	for i in bin/*; do pod2man -c "" -r "" $$i > man/$$(basename $$i).1; done
