also need build-essential and fakeroot to run tests

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,3 +1,3 @@
 Tests: testsuite
-Depends: @, @builddeps@
+Depends: @, @builddeps@, build-essential, fakeroot
 Restrictions: rw-build-tree allow-stderr
