dh_ruby_fixdepends: inject minimum Ruby dependency

--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Build-Depends: debhelper (>= 7.0.50~),
                devscripts,
                lintian,
                rake,
-               ruby-all-dev (>= 1:1.9.3.4),
+               ruby-all-dev (>= 1:2.1.0.3~),
                ruby-mocha (>= 0.14.0),
                ruby-setup,
                ruby-shoulda-context,
@@ -27,7 +27,7 @@ Depends: build-essential,
          debhelper (>= 7.0.50~),
          devscripts,
          ruby | ruby-interpreter,
-         ruby-all-dev (>= 1:1.9.3.4),
+         ruby-all-dev (>= 1:2.1.0.3~),
          ${misc:Depends},
          ${perl:Depends},
          ${shlibs:Depends}
