--- a/test/sample/simplegem/Rakefile
+++ b/test/sample/simplegem/Rakefile
@@ -1,5 +1,4 @@
-require 'rubygems'
-require 'rake/gempackagetask'
+require 'rubygems/package_task'
 
 spec = Gem::Specification.new do |s|
   s.platform = Gem::Platform::RUBY
@@ -8,6 +7,10 @@ spec = Gem::Specification.new do |s|
   s.version = '0.0.1'
   s.requirements << 'none'
   s.require_path = 'lib'
+  s.author = 'Debian Ruby Extras Maintainers'
+  s.email = 'pkg-ruby-extras-maintainers@lists.alioth.debian.org'
+  s.homepage = 'https://wiki.debian.org/Teams/Ruby'
+  s.license = 'GPL-3+'
   #s.autorequire = 'rake'
   s.files = Dir.glob('lib/**')
   s.description = <<EOF
@@ -15,7 +18,7 @@ simplegem is a simple gem that is used to test gem2tgz.
 EOF
 end
 
-Rake::GemPackageTask.new(spec) do |pkg|
+Gem::PackageTask.new(spec) do |pkg|
   pkg.need_zip = true
   pkg.need_tar = true
 end
