--- a/test/sample/simpleextension_dh_auto_install_destdir/Rakefile
+++ b/test/sample/simpleextension_dh_auto_install_destdir/Rakefile
@@ -1,5 +1,4 @@
-require 'rubygems'
-require 'rake/gempackagetask'
+require 'rubygems/package_task'
 
 spec = Gem::Specification.new do |s|
   s.platform = Gem::Platform::RUBY
@@ -9,6 +8,10 @@ spec = Gem::Specification.new do |s|
   s.requirements << 'none'
   s.require_path = 'ext'
   s.extensions << 'ext/simpleextension/extconf.rb'
+  s.author = 'Debian Ruby Extras Maintainers'
+  s.email = 'pkg-ruby-extras-maintainers@lists.alioth.debian.org'
+  s.homepage = 'https://wiki.debian.org/Teams/Ruby'
+  s.license = 'GPL-3+'
   #s.autorequire = 'rake'
   s.files = Dir.glob('{bin,ext}/**/*')
   s.description = <<EOF
@@ -17,7 +20,7 @@ EOF
   s.test_files = ['test/test_simpleextension.rb']
 end
 
-Rake::GemPackageTask.new(spec) do |pkg|
+Gem::PackageTask.new(spec) do |pkg|
   pkg.need_zip = false
   pkg.need_tar = false
 end
