--- a/test/sample/simpleprogram-no-shebang/Rakefile
+++ b/test/sample/simpleprogram-no-shebang/Rakefile
@@ -1,5 +1,4 @@
-require 'rubygems'
-require 'rake/gempackagetask'
+require 'rubygems/package_task'
 
 spec = Gem::Specification.new do |s|
   s.platform = Gem::Platform::RUBY
@@ -8,6 +7,10 @@ spec = Gem::Specification.new do |s|
   s.version = '1.2.3'
   s.requirements << 'none'
   s.require_path = 'lib'
+  s.author = 'Debian Ruby Extras Maintainers'
+  s.email = 'pkg-ruby-extras-maintainers@lists.alioth.debian.org'
+  s.homepage = 'https://wiki.debian.org/Teams/Ruby'
+  s.license = 'GPL-3+'
   #s.autorequire = 'rake'
   s.files = Dir.glob('{bin,man}/**/*')
   s.test_files = ['test/runprogram.rb']
@@ -16,7 +19,7 @@ simpleprogram-no-shebang is a simple program that is used to test dh_ruby.
 EOF
 end
 
-Rake::GemPackageTask.new(spec) do |pkg|
+Gem::PackageTask.new(spec) do |pkg|
   pkg.need_zip = false
   pkg.need_tar = false
 end
