--- a/test/sample/simpletgz/Rakefile
+++ b/test/sample/simpletgz/Rakefile
@@ -1,21 +1,24 @@
-require 'rubygems'
-require 'rake/gempackagetask'
+require 'rubygems/package_task'
 
 spec = Gem::Specification.new do |s|
   s.platform = Gem::Platform::RUBY
   s.summary = "Simple gem used to test gem2tgz."
-  s.name = 'simplegem'
+  s.name = 'simpletgz'
   s.version = '0.0.1'
   s.requirements << 'none'
   s.require_path = 'lib'
+  s.author = 'Debian Ruby Extras Maintainers'
+  s.email = 'pkg-ruby-extras-maintainers@lists.alioth.debian.org'
+  s.homepage = 'https://wiki.debian.org/Teams/Ruby'
+  s.license = 'GPL-3+'
   #s.autorequire = 'rake'
   s.files = Dir.glob('lib/**')
   s.description = <<EOF
-simplegem is a simple gem that is used to test gem2tgz.
+simpletgz is a simple gem that is used to test gem2tgz.
 EOF
 end
 
-Rake::GemPackageTask.new(spec) do |pkg|
+Gem::PackageTask.new(spec) do |pkg|
   pkg.need_zip = true
   pkg.need_tar = true
 end
