--- a/debian/rules
+++ b/debian/rules
@@ -9,6 +9,10 @@ override_dh_auto_build: $(ruby_versions)
 	mkdir -p man
 	for i in bin/*; do pod2man -c "" -r "" $$i > man/$$(basename $$i).1; done
 
+override_dh_install:
+	dh_install -pgem2deb -Xgem2deb-test-runner -Xtest_runner.rb
+	dh_install -pgem2deb-test-runner
+
 .PHONY: $(ruby_versions)
 
 $(ruby_versions):
