tests: use only the control file with Test-Command fields

--- a/lib/gem2deb/dh_make_ruby/template/debian/tests/control
+++ b/lib/gem2deb/dh_make_ruby/template/debian/tests/control
@@ -1,6 +1,7 @@
-Tests: testsuite
+Test-Command: gem2deb-test-runner
 Depends: @, @builddeps@, gem2deb-test-runner
 
-Tests: load-test
-Depends: @
+#FIXME: replace LIB by the name of the main file of the library
+#Test-Command: ruby -r LIB -e "puts true"
+#Depends: @
 
