add the --autopkgtest to gem2deb-test-runner in debian/tests/control
this ensures that lib/ and ext/ are moved when the tests are run, so
that we really test the installed package.

--- a/lib/gem2deb/dh_make_ruby/template/debian/tests/control
+++ b/lib/gem2deb/dh_make_ruby/template/debian/tests/control
@@ -1,4 +1,4 @@
-Test-Command: gem2deb-test-runner
+Test-Command: gem2deb-test-runner --autopkgtest
 Depends: @, @builddeps@, gem2deb-test-runner
 
 #FIXME: replace LIB by the name of the main file of the library
