--- a/lib/gem2deb/dh_make_ruby/template/debian/tests/control
+++ b/lib/gem2deb/dh_make_ruby/template/debian/tests/control
@@ -1,4 +1,4 @@
-Test-Command: gem2deb-test-runner --autopkgtest
+Test-Command: gem2deb-test-runner --autopkgtest 2>&1
 Depends: @, @builddeps@, gem2deb-test-runner
 
 #FIXME: replace LIB by the name of the main file of the library
