Remove alternative dependency on ruby-interpreter (Closes: #758806)

--- a/debian/control
+++ b/debian/control
@@ -27,7 +27,7 @@ Depends: build-essential,
          debhelper (>= 7.0.50~),
          devscripts,
          gem2deb-test-runner (= ${source:Version}),
-         ruby | ruby-interpreter,
+         ruby,
          ruby-all-dev (>= 1:2.1.0.3~),
          ${misc:Depends},
          ${perl:Depends},
