add apt-file to Recommends:

--- a/debian/control
+++ b/debian/control
@@ -33,6 +33,7 @@ Depends: build-essential,
          ${misc:Depends},
          ${perl:Depends},
          ${shlibs:Depends}
+Recommends: apt-file
 Description: Debian Ruby packaging suite
  gem2deb is a set of tools to create Debian package from ruby software
  distributed with Rubygems. gem2tgz converts the .gem file to a tar archive,
