SetupRbInstaller: copy setup.rb instead of symlinking
cp will fail if setup.rb is not there.

--- a/debian/control
+++ b/debian/control
@@ -30,6 +30,7 @@ Depends: build-essential,
          gem2deb-test-runner (= ${source:Version}),
          ruby,
          ruby-all-dev (>= 1:2.1.0.3~),
+         ruby-setup,
          ${misc:Depends},
          ${perl:Depends},
          ${shlibs:Depends}
