Update Vcs-Browser to cgit URL and HTTPS

--- a/debian/control
+++ b/debian/control
@@ -19,7 +19,7 @@ Build-Depends: debhelper (>= 7.0.50~),
                ruby-test-unit
 Standards-Version: 3.9.6
 Vcs-Git: git://anonscm.debian.org/pkg-ruby-extras/gem2deb.git
-Vcs-Browser: http://anonscm.debian.org/gitweb?p=pkg-ruby-extras/gem2deb.git;a=summary
+Vcs-Browser: https://anonscm.debian.org/cgit/pkg-ruby-extras/gem2deb.git
 XS-Testsuite: autopkgtest
 
 Package: gem2deb
