--- a/test/sample/multibinary/debian/control
+++ b/test/sample/multibinary/debian/control
@@ -6,7 +6,7 @@ Uploaders: Antonio Terceiro <terceiro@debian.org>
 Build-Depends: debhelper (>= 7.0.50~), gem2deb (>= 0.3.1~)
 Standards-Version: 3.9.4
 #Vcs-Git: git://anonscm.debian.org/pkg-ruby-extras/ruby-multibinary.git
-#Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-ruby-extras/ruby-multibinary.git;a=summary
+#Vcs-Browser: https://anonscm.debian.org/cgit/pkg-ruby-extras/ruby-multibinary.git
 Homepage: FIXME
 XS-Ruby-Versions: all
 
