--- a/test/sample/simpleextension_dh_auto_install_destdir/debian/control
+++ b/test/sample/simpleextension_dh_auto_install_destdir/debian/control
@@ -6,7 +6,7 @@ Uploaders: Antonio Terceiro <terceiro@debian.org>
 Build-Depends: debhelper (>= 7.0.50~), gem2deb (>= 0.4.0~)
 Standards-Version: 3.9.4
 #Vcs-Git: git://anonscm.debian.org/pkg-ruby-extras/ruby-simpleextension-dh-auto-install-destdir.git
-#Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-ruby-extras/ruby-simpleextension-dh-auto-install-destdir.git;a=summary
+#Vcs-Browser: https://anonscm.debian.org/cgit/pkg-ruby-extras/ruby-simpleextension-dh-auto-install-destdir.git
 Homepage: FIXME
 XS-Ruby-Versions: all
 
