--- a/debian/control
+++ b/debian/control
@@ -7,9 +7,9 @@ Uploaders: Lucas Nussbaum <lucas@debian.org>,
            Vincent Fourmond <fourmond@debian.org>,
            Gunnar Wolf <gwolf@debian.org>,
            Cédric Boutillier <boutil@debian.org>
-Build-Depends: debhelper (>= 9.20141010~),
+Build-Depends: debhelper (>= 9.20141010),
                devscripts <!nocheck>,
-               dpkg-dev (>= 1.17.14~),
+               dpkg-dev (>= 1.17.14),
                lintian <!nocheck>,
                rake <!nocheck>,
                ruby (>= 1:2.1.0.3~),
