--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,9 @@ Uploaders: Lucas Nussbaum <lucas@debian.org>,
 Build-Depends: debhelper (>= 9.20141010),
                devscripts <!nocheck>,
                dpkg-dev (>= 1.17.14),
+               dctrl-tools <!nocheck>,
                lintian <!nocheck>,
+               python3-debian <!nocheck>,
                rake <!nocheck>,
                ruby (>= 1:2.1.0.3~),
                ruby-all-dev (>= 1:2.1.0.3~),
@@ -30,6 +32,7 @@ Depends: build-essential,
          debhelper (>= 7.0.50~),
          devscripts,
          gem2deb-test-runner (= ${source:Version}),
+         python3-debian,
          ruby,
          ruby-all-dev (>= 1:2.1.0.3~),
          ruby-setup,
