gem2deb-test-runner: add dependency on ruby-minitest

--- a/debian/control
+++ b/debian/control
@@ -50,6 +50,7 @@ Description: Debian Ruby packaging suite
 Package: gem2deb-test-runner
 Architecture: all
 Depends: ruby | ruby-interpreter,
+         ruby-minitest,
          ruby-test-unit,
          ${misc:Depends},
          ${shlibs:Depends}
