--- a/debian/control
+++ b/debian/control
@@ -7,10 +7,10 @@ Uploaders: Lucas Nussbaum <lucas@debian.org>,
            Vincent Fourmond <fourmond@debian.org>,
            Gunnar Wolf <gwolf@debian.org>,
            Cédric Boutillier <boutil@debian.org>
-Build-Depends: debhelper (>= 9.20141010),
+Build-Depends: dctrl-tools <!nocheck>,
+               debhelper (>= 9.20141010),
                devscripts <!nocheck>,
                dpkg-dev (>= 1.17.14),
-               dctrl-tools <!nocheck>,
                lintian <!nocheck>,
                python3-debian <!nocheck>,
                rake <!nocheck>,
