--- a/debian/control
+++ b/debian/control
@@ -49,8 +49,7 @@ Description: Debian Ruby packaging suite
 
 Package: gem2deb-test-runner
 Architecture: all
-Depends: rake,
-         ruby | ruby-interpreter,
+Depends: ruby | ruby-interpreter,
          ruby-minitest,
          ruby-test-unit,
          ${misc:Depends},
