--- a/debian/control
+++ b/debian/control
@@ -22,7 +22,7 @@ Build-Depends: dctrl-tools <!nocheck>,
                ruby-shoulda-context <!nocheck>,
                ruby-test-unit <!nocheck>
 Standards-Version: 3.9.6
-Vcs-Git: git://anonscm.debian.org/pkg-ruby-extras/gem2deb.git
+Vcs-Git: https://anonscm.debian.org/git/pkg-ruby-extras/gem2deb.git
 Vcs-Browser: https://anonscm.debian.org/cgit/pkg-ruby-extras/gem2deb.git
 Testsuite: autopkgtest
 
