gem installed: implement correct installation of native extensions

--- a/test/sample/install_as_gem/debian/control
+++ b/test/sample/install_as_gem/debian/control
@@ -13,7 +13,7 @@ Testsuite: autopkgtest-pkg-ruby
 XS-Ruby-Versions: all
 
 Package: ruby-install-as-gem
-Architecture: all
+Architecture: any
 XB-Ruby-Versions: ${ruby:Versions}
 Depends: ruby | ruby-interpreter,
          ${misc:Depends},
