--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Uploaders: Lucas Nussbaum <lucas@debian.org>,
            Gunnar Wolf <gwolf@debian.org>,
            Cédric Boutillier <boutil@debian.org>
 Build-Depends: dctrl-tools <!nocheck>,
-               debhelper (>= 9.20141010),
+               debhelper (>= 9),
                devscripts <!nocheck>,
                dpkg-dev (>= 1.17.14),
                lintian <!nocheck>,
@@ -29,7 +29,7 @@ Testsuite: autopkgtest
 Package: gem2deb
 Architecture: all
 Depends: build-essential,
-         debhelper (>= 7.0.50~),
+         debhelper (>= 9~),
          devscripts,
          gem2deb-test-runner (= ${source:Version}),
          python3-debian,
