--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,8 @@ Uploaders: Lucas Nussbaum <lucas@debian.org>,
            Antonio Terceiro <terceiro@debian.org>,
            Vincent Fourmond <fourmond@debian.org>,
            Gunnar Wolf <gwolf@debian.org>,
-           Cédric Boutillier <boutil@debian.org>
+           Cédric Boutillier <boutil@debian.org>,
+           Christian Hofstaedtler <zeha@debian.org>
 Build-Depends: dctrl-tools <!nocheck>,
                debhelper (>= 9.20141010),
                devscripts <!nocheck>,
