--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Uploaders: Lucas Nussbaum <lucas@debian.org>,
            Gunnar Wolf <gwolf@debian.org>,
            Cédric Boutillier <boutil@debian.org>
 Build-Depends: dctrl-tools <!nocheck>,
-               debhelper (>= 9),
+               debhelper (>= 9.20141010),
                devscripts <!nocheck>,
                dpkg-dev (>= 1.17.14),
                lintian <!nocheck>,
