gem2deb-test-runner: Add Build-Dep on dpkg-dev. Autopkgtests may use this, and don't necessarily have build-essential.

--- a/debian/control
+++ b/debian/control
@@ -51,7 +51,8 @@ Description: Debian Ruby packaging suite
 
 Package: gem2deb-test-runner
 Architecture: any
-Depends: rake,
+Depends: dpkg-dev,
+         rake,
          ruby | ruby-interpreter,
          ruby-minitest,
          ruby-test-unit,
