--- a/debian/control
+++ b/debian/control
@@ -24,8 +24,8 @@ Build-Depends: dctrl-tools <!nocheck>,
                ruby-shoulda-context <!nocheck>,
                ruby-test-unit <!nocheck>
 Standards-Version: 4.1.3
-Vcs-Git: https://anonscm.debian.org/git/pkg-ruby-extras/gem2deb.git
-Vcs-Browser: https://anonscm.debian.org/cgit/pkg-ruby-extras/gem2deb.git
+Vcs-Git: https://salsa.debian.org/ruby-team/gem2deb.git
+Vcs-Browser: https://salsa.debian.org/ruby-team/gem2deb
 Testsuite: autopkgtest
 
 Package: gem2deb
