dh_ruby_fixdepends: include upper bound on ruby versions
Closes: #889470

--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Build-Depends: dctrl-tools <!nocheck>,
                python3-debian <!nocheck>,
                rake <!nocheck>,
                ruby (>= 1:2.1.0.3~),
-               ruby-all-dev (>= 1:2.1.0.3~),
+               ruby-all-dev (>= 1:2.5),
                ruby-mocha (>= 0.14.0) <!nocheck>,
                ruby-rspec <!nocheck>,
                ruby-setup <!nocheck>,
@@ -34,7 +34,7 @@ Depends: debhelper (>= 11~),
          gem2deb-test-runner (= ${binary:Version}),
          rake,
          ruby,
-         ruby-all-dev (>= 1:2.1.0.3~),
+         ruby-all-dev (>= 1:2.5),
          ruby-setup,
          ${misc:Depends},
          ${perl:Depends},
