dh-make-ruby: add `DH_RUBY = --gem-install` by default to debian/rules
`simpleextension-with-name-clash` is one of our test cases, which does not
really work with --gem-install.

--- a/lib/gem2deb/dh_make_ruby/template/debian/rules
+++ b/lib/gem2deb/dh_make_ruby/template/debian/rules
@@ -3,6 +3,9 @@
 <% if (@gem_name != 'simplegem') %>
 export GEM2DEB_TEST_RUNNER = --check-dependencies
 <% end %>
+<% if (@gem_name != 'simpleextension-with-name-clash') %>
+export DH_RUBY = --gem-install
+<% end %>
 
 %:
 	dh $@ --buildsystem=ruby --with ruby
